# bock

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/bock/: Cargo.toml
crates/bock-common/: Cargo.toml
crates/bock-common/src/: error.rs  id.rs  lib.rs  paths.rs  resource.rs
crates/bock-image/: Cargo.toml
crates/bock-image/src/: credentials.rs  layer.rs  lib.rs  reference.rs  registry.rs  store.rs
crates/bock-network/: Cargo.toml
crates/bock-network/src/: bridge.rs  dns.rs  ipv6.rs  lib.rs  modes.rs  netns.rs  policy.rs  portmap.rs  veth.rs
crates/bock-oci/: Cargo.toml
crates/bock-oci/src/: image.rs  lib.rs  runtime.rs  state.rs
crates/bock-runtime/: Cargo.toml
crates/bock-runtime/src/: bockfile.rs  bockfile_v2.rs  build.rs  cache.rs  cli.rs  lib.rs  main.rs  registry.rs
crates/bock-ui/: Cargo.toml
crates/bock/src/: lib.rs  main.rs
crates/bock/src/cgroup/: controllers.rs  manager.rs  mod.rs  v1.rs
crates/bock/src/cli/: mod.rs
crates/bock/src/exec/: console.rs  hooks.rs  init.rs  mod.rs  process.rs  pty.rs  stdio.rs
crates/bock/src/filesystem/: layers.rs  mod.rs  mounts.rs  overlay.rs  pivot.rs  rootfs.rs  volume.rs
crates/bock/src/namespace/: ipc.rs  manager.rs  mod.rs  mount.rs  net.rs  pid.rs  user.rs  userns.rs  uts.rs
crates/bock/src/network/: bridge.rs  mod.rs  veth.rs
crates/bock/src/runtime/: config.rs  container.rs  events.rs  lifecycle.rs  mod.rs  state.rs
crates/bock/src/security/: apparmor.rs  capabilities.rs  mod.rs  seccomp.rs  selinux.rs
crates/bock/tests/: container_persistence.rs  oci_compliance.rs
crates/bockd/: Cargo.toml  build.rs
crates/bockd/proto/: bockd.proto
crates/bockd/src/: grpc.rs  main.rs
crates/bockd/src/api/: server.rs
crates/bockrose/: Cargo.toml
crates/bockrose/src/: cli.rs  health.rs  lib.rs  main.rs  network.rs  orchestrator.rs  spec.rs  volume.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  BOCKFILE_SPEC.md  CONTRIBUTING.md  USER_GUIDE.md
examples/: bockrose-demo.yaml
examples/demo/: Bockfile
tests/: image_store_tests.rs
