[package]
name = "bock-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared utilities for the Bock container ecosystem"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
