[package]
name = "bock-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Spec-driven container image builder for Bock"

[[bin]]
name = "bock-runtime"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bock-common = { workspace = true }
bock-oci = { workspace = true }
bock-image = { workspace = true }
bock = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tempfile = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
dirs = "6"

[dev-dependencies]
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
