[package]
name = "bock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Modern container runtime built in Rust"

[[bin]]
name = "bock"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal crates
bock-common = { workspace = true }
bock-oci = { workspace = true }
bock-network = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Linux syscalls
rustix = { workspace = true }
caps = { workspace = true }
seccompiler = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }
color-eyre = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
libc = "0.2"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
test-log = { workspace = true }

[features]
default = []
integration = []
stress = []
