[package]
name = "bockd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bock-common = { workspace = true }
bock-network = { workspace = true }
bock-oci = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = "1.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bock = { path = "../bock" }
tonic = "0.14.2"
prost = { workspace = true }
tonic-prost = "0.14"
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true
