[package]
name = "bockrose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multi-container orchestration for Bock (Docker Compose alternative)"

[[bin]]
name = "bockrose"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bock-common = { workspace = true }
bock-oci = { workspace = true }
bock-image = { workspace = true }
bock-network = { workspace = true }
bock = { workspace = true }
bock-runtime = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tabled = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
